--- a/src/styles/common/Form.css
+++ b/src/styles/common/Form.css
@@ -8,31 +8,20 @@
     max-width: 500px;
 }
 
-.field {
+.form div {
     padding-top: 8px;
     display: flex;
     flex-direction: column;
 }
 
-.form-title {
+
+.form h1 {
     color: rgb(3, 149, 234);
     font-weight: 500;
     font-size: 30px;
 }
 
-label {
+.form label {
     font-weight: 400;
     color: rgb(98, 98, 98);
-}
-
-input {
-    padding: 5px;
-    border: 1px solid rgb(98, 98, 98);
-    border-radius: 4px;
-}
-
-textarea {
-    padding: 5px;
-    border: 1px solid rgb(98, 98, 98);
-    border-radius: 4px;
 }
